--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
-  "tasks": {
-    "dev": "deno run --watch main.ts"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "discord": "npm:discord.js@^14.22.1"
-  }
+	"tasks": {
+		"dev": "deno run --watch main.ts"
+	},
+	"imports": {
+		"@biomejs/biome": "npm:@biomejs/biome@^2.2.4",
+		"@std/assert": "jsr:@std/assert@1",
+		"discord": "npm:discord.js@^14.22.1"
+	}
 }
