--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
 	"tasks": {
-		"dev": "deno run --watch main.ts"
+		"dev": "deno run --allow-all --watch main.ts",
+		"lint": "deno run -A npm:@biomejs/biome check",
+		"lint-fix": "deno run -A npm:@biomejs/biome check --write"
 	},
 	"imports": {
 		"@biomejs/biome": "npm:@biomejs/biome@^2.2.4",
