--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
 	"tasks": {
 		"dev": "deno run --allow-all --watch main.ts",
+		"deploy-dev-commands": "deno run --allow-all deploy-commands.ts",
 		"lint": "deno run -A npm:@biomejs/biome check",
 		"lint-fix": "deno run -A npm:@biomejs/biome check --write"
 	},
