--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
 	"imports": {
 		"@biomejs/biome": "npm:@biomejs/biome@^2.2.4",
 		"@std/assert": "jsr:@std/assert@1",
-		"discord": "npm:discord.js@^14.22.1"
+		"discord": "npm:discord.js@^14.22.1",
+		"lowdb": "npm:lowdb@^7.0.1"
 	}
 }
